# ems_file_format_converter

./: .gitignore  LICENSE  README.md  README_en.md  cli.py  pyproject.toml
.github/workflows/: cli.yml
atlas/: atlas.py
data/CoreCoil/: current_org.atl  current_org.neu  current_org.unv  magnetic_org.neu  magnetic_out.neu  post_geom_org.atl  post_geom_org.neu  post_geom_org.unv  post_geom_out.atl  post_geom_out.neu  post_geom_out.unv  test.py
femap/: neu.py
sample/: mesh_sample.atl  mesh_sample.neu  mesh_sample.unv  mesh_sample10.3.neu  post_sample.atl  post_sample.neu  post_sample.unv  post_sample10.3.neu  post_sample1051.neu  post_sample451.neu  sample_mesh.neu  sample_mesh10.3.neu  sample_post.neu  sample_post10.3.neu
tests/: test_atlas.py  test_atlas_sample.py  test_neu.py  test_neu_sample.py  test_unv.py  test_unv_sample.py
unv/: unv.py
