[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ems-file-format-converter"
version = "0.1.0"
description = "CAE file format converter (Femap neutral, I-DEAS UNV, ATLAS, ...)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["meshio>=5.0"]

[project.scripts]
ems-file-format-converter = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["atlas", "unv", "femap"]
exclude = ["tests", "sample", "__pycache__"]
